<resources>
    <string name="app_name">Futula Coffee Scale</string>
    <string name="nav_header_title">Futula Coffee Scale</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_save">Save</string>
    <string name="action_saved">Saved brew to history</string>
    <string name="action_not_saved_empty">Cannot save empty brew</string>

    <string name="menu_home">Brew</string>
    <string name="menu_history">Brew History</string>
    <string name="menu_history_info">Brew Info</string>
    <string name="menu_settings">Settings</string>
    <string name="switch_tare_text">Tare</string>
    <string name="switch_dose_text">Dose</string>
    <string name="switch_autostart_text">Start</string>
    <string name="enable_autostart_text">Enable autostart</string>
    <string name="enable_autodose_text">Enable autodose</string>
    <string name="enable_autotare_text">Enable autotare</string>
    <string name="enable_autofunctions_text">Enable auto functions</string>
    <string name="enable_hide_switches">Hide switches when brewing</string>
    <string name="enable_hide_buttons">Hide buttons after brewing</string>
    <string name="enable_ignore_dose">Ignore dose</string>
    <string name="button_dose">Dose</string>
    <string name="button_connect">Connect</string>
    <string name="button_reset">Reset</string>
    <string name="weight_text">Weight</string>
    <string name="dose_text">Dose</string>
    <string name="flowrate_text">Flow rate</string>
    <string name="time_text">TIME</string>
    <string name="brew_ratio_text">Brew ratio</string>
    <string name="flowrate_avg_text">Flow average</string>
    <string name="button_connect_connecting">Connecting</string>
    <string name="button_connect_disconnecting">Disconnecting</string>
    <string name="button_connect_scanning">Scanning</string>
    <string name="button_connect_start_brew">GO ON</string>
    <string name="button_connect_pause_brew">Pause</string>
    <string name="button_dose_finish">Finish</string>
    <string name="button_connect_resume_brew">Resume</string>
    <string name="enable_reset_as_tare">Replace reset with tare</string>
    <string name="button_reset_as_tare">Tare</string>
    <string name="stop_timer_on_lost">Stop timer on connection lost</string>
    <string name="search_after_launch">Connect after app launch</string>
    <string name="one_graph">Show one graph in history</string>
    <string name="history_data_main">Data</string>
    <string name="history_data_extra">Extra</string>
    <string name="coffee_bean">Coffee bean</string>
    <string name="coffee_grinder">Сoffee Grinder</string>
    <string name="coffee_grinder_level">Grind level</string>
    <string name="gadget_name">Brew method</string>
    <string name="water_temp">Water temperature</string>
    <string name="extra_info">Extra info</string>
    <string name="extra_save_button">Save</string>
    <string name="extra_clear_button">Clear</string>
    <string name="action_saved_extra">Saved extra data</string>
    <string name="action_updated_extra">Updated extra data</string>
    <string name="action_deleted_extra">Deleted extra data</string>
    <string name="extra_save_button_alt">Update</string>
    <string name="weight_text_locked">🔒 Weight</string>
    <string name="dose_edit_hint">0.0</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">CANCEL</string>
    <string name="dose_edit_title">Edit dose</string>
    <string name="menu_about">About...</string>
    <string name="nav_header_subtitle">For Futula Kitchen Scale 3</string>
    <string name="app_version_label">Application version</string>
    <string name="app_link_label">Latest release</string>
    <string name="app_idea_label">Original idea</string>
    <string name="app_author_label">Created by</string>
    <string name="location_permission_required">Location permission required</string>
    <string name="bluetooth_permission_required">Bluetooth permission required</string>
    <string name="location_permission_required_text">Starting from Android M (6.0), the system requires apps to be granted location access in order to scan for BLE devices.</string>
    <string name="bluetooth_permission_required_text">Starting from Android 12, the system requires apps to be granted Bluetooth access in order to scan for and connect to BLE devices.</string>
    <string name="enable_server_weight">Enable saving dripper weight</string>
    <string name="coffee_roaster">Coffe Roaster</string>
    <string name="search_in_history">Search...</string>
    <string name="weight_unit">g</string>
    <string name="water_unit">ml</string>
    <string name="milk_unit">ml milk</string>
    <string name="oz_unit">oz</string>
    <string name="search_hint">Search...</string>
    <string name="weight_graph_type">Weight graph type</string>
    <string name="flowrate_graph_type">Flowrate graph type</string>
    <string name="unit_settings_header">Unit settings</string>
    <string name="setting_use_fixed_unit">Fix units use on scale</string>
    <string name="setting_fixed_unit_value">Unit to use</string>
    <string name="setting_always_convert_units">ALways convert to unit</string>
    <string name="setting_preferred_display_unit_value">Unit to display in app</string>
    <string name="graph_settings_header">Graphs Settings</string>
    <string name="in">in</string>
</resources>