<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.historyExtra.HistoryExtraFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/coffee_bean_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:hint="@string/coffee_bean"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/coffee_bean_data_auto"
                    style="@style/Widget.Material3.AutoCompleteTextView.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/coffee_roast_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:hint="@string/coffee_roaster"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/coffee_roast_data_auto"
                    style="@style/Widget.Material3.AutoCompleteTextView.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/coffee_grinder_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:hint="@string/coffee_grinder"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/coffee_grinder_data_auto"
                    style="@style/Widget.Material3.AutoCompleteTextView.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/coffee_grinder_level_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:hint="@string/coffee_grinder_level"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/coffee_grinder_level_auto"
                    style="@style/Widget.Material3.AutoCompleteTextView.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/gadget_name_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:hint="@string/gadget_name"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/gadget_name_auto"
                    style="@style/Widget.Material3.AutoCompleteTextView.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/water_temp_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:hint="@string/water_temp"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/water_temp_auto"
                    style="@style/Widget.Material3.AutoCompleteTextView.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/extra_info_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:hint="@string/extra_info">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/extra_info_auto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:id="@+id/divider4"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="8dp"
                android:background="?android:attr/listDivider" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="8dp"
                android:layout_marginVertical="8dp">

                <Button
                    android:id="@+id/saveButton"
                    style="?attr/materialIconButtonFilledStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="@string/extra_save_button"
                    app:icon="@drawable/baseline_save_24"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/clearButton"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/clearButton"
                    style="?attr/materialIconButtonFilledStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/extra_clear_button"
                    app:icon="@drawable/baseline_delete_24"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>
</FrameLayout>