<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.historyInfo.HistoryInfoFragment">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/weightLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="marquee"
                    android:justificationMode="inter_word"
                    android:maxLines="1"
                    android:text="@string/weight_text"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    app:autoSizeTextType="uniform" />

                <TextView
                    android:id="@+id/weightText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="0,0"
                    android:textAlignment="center"
                    android:textSize="34sp"
                    android:textStyle="bold"
                    android:maxLines="1"
                    app:autoSizeTextType="uniform"
                    android:justificationMode="inter_word"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/doseLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="marquee"
                    android:justificationMode="inter_word"
                    android:maxLines="1"
                    android:text="@string/dose_text"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    app:autoSizeTextType="uniform" />

                <TextView
                    android:id="@+id/doseText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="0,0"
                    android:textAlignment="center"
                    android:textSize="34sp"
                    android:textStyle="bold"
                    android:maxLines="1"
                    app:autoSizeTextType="uniform"
                    android:justificationMode="inter_word"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/flowRateLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="marquee"
                    android:justificationMode="inter_word"
                    android:maxLines="1"
                    android:text="@string/flowrate_avg_text"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    app:autoSizeTextType="uniform" />

                <TextView
                    android:id="@+id/flowRateText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="0,0"
                    android:textAlignment="center"
                    android:textSize="34sp"
                    android:textStyle="bold"
                    android:maxLines="1"
                    app:autoSizeTextType="uniform"
                    android:justificationMode="inter_word"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/timeLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="marquee"
                    android:justificationMode="inter_word"
                    android:maxLines="1"
                    android:text="@string/time_text"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    app:autoSizeTextType="uniform" />

                <TextView
                    android:id="@+id/timeText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="00:00.0"
                    android:textAlignment="center"
                    android:textSize="34sp"
                    android:textStyle="bold"
                    android:maxLines="1"
                    app:autoSizeTextType="uniform"
                    android:justificationMode="inter_word"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/brewRatioLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="marquee"
                    android:justificationMode="inter_word"
                    android:maxLines="1"
                    android:text="@string/brew_ratio_text"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    app:autoSizeTextType="uniform" />

                <TextView
                    android:id="@+id/brewRatioText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="1:0,0"
                    android:textAlignment="center"
                    android:textSize="34sp"
                    android:textStyle="bold"
                    android:maxLines="1"
                    app:autoSizeTextType="uniform"
                    android:justificationMode="inter_word"/>
            </LinearLayout>
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2">

            <com.github.aachartmodel.aainfographics.aachartcreator.AAChartView
                android:id="@+id/chartWeightView"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </com.github.aachartmodel.aainfographics.aachartcreator.AAChartView>
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3">

            <com.github.aachartmodel.aainfographics.aachartcreator.AAChartView
                android:id="@+id/chartFlowRateView"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </com.github.aachartmodel.aainfographics.aachartcreator.AAChartView>
        </FrameLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>