<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.aboutPage.AboutPageFragment" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/appVersionLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/appVersionLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginVertical="8dp"
                android:elegantTextHeight="true"
                android:ellipsize="marquee"
                android:text="@string/app_version_label"
                android:textAlignment="textStart"
                android:textSize="16sp"
                android:textStyle="bold"
                app:autoSizeTextType="uniform"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/appVersionText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginVertical="8dp"
                android:elegantTextHeight="true"
                android:ellipsize="marquee"
                android:text="0.0.0"
                android:textAlignment="textStart"
                android:textSize="14sp"
                app:autoSizeTextType="uniform"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/appVersionLabel" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:id="@+id/divider6"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginVertical="8dp"
            android:background="?android:attr/listDivider" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/appRepoLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/appRepoLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:elegantTextHeight="true"
                android:ellipsize="marquee"
                android:text="@string/app_link_label"
                android:textAlignment="textStart"
                android:textSize="16sp"
                android:textStyle="bold"
                app:autoSizeTextType="uniform"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/appRepoLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginVertical="8dp"
                android:elegantTextHeight="true"
                android:ellipsize="marquee"
                android:text="https://github.com/wdrs/FutulaCoffeeScale/releases"
                android:textAlignment="textStart"
                android:textSize="14sp"
                app:autoSizeTextType="uniform"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/appRepoLabel" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:id="@+id/divider7"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginVertical="8dp"
            android:background="?android:attr/listDivider" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/appIdeaLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/appIdeaLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:elegantTextHeight="true"
                android:ellipsize="marquee"
                android:text="@string/app_idea_label"
                android:textAlignment="textStart"
                android:textSize="16sp"
                android:textStyle="bold"
                app:autoSizeTextType="uniform"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/appIdeaLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginVertical="8dp"
                android:elegantTextHeight="true"
                android:ellipsize="marquee"
                android:text="https://t.me/coffeesaurus"
                android:textAlignment="textStart"
                android:textSize="14sp"
                app:autoSizeTextType="uniform"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/appIdeaLabel" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:id="@+id/divider8"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginVertical="8dp"
            android:background="?android:attr/listDivider" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/appAuthorLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/appAuthorLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:elegantTextHeight="true"
                android:ellipsize="marquee"
                android:text="@string/app_author_label"
                android:textAlignment="textStart"
                android:textSize="16sp"
                android:textStyle="bold"
                app:autoSizeTextType="uniform"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/appAuthorLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginVertical="8dp"
                android:elegantTextHeight="true"
                android:ellipsize="marquee"
                android:text="https://t.me/tomatishe"
                android:textAlignment="textStart"
                android:textSize="14sp"
                app:autoSizeTextType="uniform"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/appAuthorLabel" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:id="@+id/divider9"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginVertical="8dp"
            android:background="?android:attr/listDivider" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>